# schema-sentinel

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  BRANCHING.md  BRANCH_RULES_SETUP.md  CHANGELOG.md  CONFIG_IMPLEMENTATION_SUMMARY.md  CONFIG_REFACTORING_PLAN.md  CONTRIBUTING.md  DEVELOPMENT.md  MPM Comparison and Migration.ipynb  MPM Test Data Loading.ipynb  Makefile  NOTEBOOKS.md  Object Comparison.ipynb  PRE_RELEASE_CHECKLIST.md  PRODUCTION_CHECKLIST.md  PR_DESCRIPTION.md  Pandas Diff.ipynb  README.md  SANITIZATION_SUMMARY.md  SECURITY.md  SETUP_SUMMARY.md  SQLLite + SQLAlchemy.ipynb  YAML_SHREDDER_CLI.md  environment.yml  example_app.yaml  generate_mpm_schema.py  load-env.sh.example  migration_plan_AZ_to_WY.csv  pandas-test.py  pyproject.toml  requirements.txt  schema_sentinel_cli.py  schema_sentinel_config.example.yaml  setup.py  setup.sh  sql_comparison.py  test-data.yaml  (+3 more)
.github/: FUNDING.yml  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/instructions/: *.instructions.md
.github/rulesets/: README.md  dev-branch-rules.json  master-branch-protection.json
.github/workflows/: ci.yml  docs.yml  pr-description.yml  publish.yml  release.yml
conda-forge-recipe/: meta.yaml
docs/: index.html  index.md  schema_sentinel.html  search.js  yaml_shredder.html
docs/schema_sentinel/: markdown_utils.html  metadata_manager.html
docs/yaml_shredder/: data_loader.html  ddl_generator.html  schema_generator.html  structure_analyzer.html  table_generator.html
notebooks/: DuckDB_Demo.ipynb  MPM Comparison and Migration.ipynb  MPM Test Data Loading.ipynb  Object Comparison.ipynb  Pandas Diff.ipynb  SQLLite + SQLAlchemy.ipynb  YAML Comparison.ipynb  YAML_Shredder_Demo.ipynb
resources/: bootstrap.css  bs-mpm-schema.json  db.properties.example  example-postgres-ddl.sql  example-schema-generated.json  example-snowflake-ddl.sql  mpm-schema.json
resources/documents/: NOTEBOOKS.md  PRODUCTION_CHECKLIST.md
resources/examples/: example-data.yaml  example_ddl_generation.py  example_sqlite_workflow.py  example_yaml_comparison.py  generate_test_schema.py  metadata-template.html  mpm-schema.sql  test-ddl.sql  test_mpm_parser.py  test_mpm_schema.py  test_mpm_snowpark.py  test_schema_generation.py  test_yaml_shredder.py
resources/meta-db/: .gitkeep
resources/metadata-doc/: AZ_005-mpm.md  BS_005-mpm.md  CO_005-mpm.md  WY_005-mpm.md
schema_sentinel/: __init__.py  cli.py  yaml_comparator.py
schema_sentinel/config/: __init__.py  manager.py
schema_sentinel/markdown_utils/: markdown.py
schema_sentinel/metadata_manager/: changeset.py  engine.py  enums.py  metadata.py  utils.py
snowflake_local_testing/: connection.py  mock.py  mpm_parser.py  mpm_snowpark.py  schema.py
sql_comparison/: __init__.py
sql_comparison/metadata_manager/: changeset.py  engine.py  enums.py  metadata.py  utils.py
tables/: ACTIONS.csv  COMMUNITIES.csv  MPM_CONFIG.csv
tests/: README.md  __init__.py  conftest.py  pandas-test.py  test_cli.py  test_config.py  test_data_comparer.py  test_ddl_simple.py  test_depth_parameter.py  test_doc_generator.py  test_imports.py  test_mpm_parser.py  test_mpm_schema.py  test_mpm_snowpark.py  test_single_schema.py  test_sqlite_simple.py  test_yaml_comparator.py
tests/snowflake_local_testing/: __init__.py  connection.py  (+3 more)
wiki/: Architecture.md  Contributing.md  Development.md  Future-Development-Plan.md  Getting-Started.md  Home.md  README.md  Security.md
yaml_shredder/: __init__.py  data_comparer.py  data_loader.py  ddl_generator.py  doc_generator.py  schema_generator.py  structure_analyzer.py  table_generator.py  yaml_comparator.py
(+72 files in other folders)
